[package]
name = "bulut"
version = "0.2.0"
edition = "2018"
homepage = "https://osmon.dev"
documentation = "https://wiki.osmon.dev/bulut"
authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
description = "Osmon VM"
readme = "readme.md"
repository = "https://github.com/osmon-lang/osmon-vm"
keywords = ["vm","register","register-based", "uzbek"]
license = "Apache-2.0"

[profile.dev]

[profile.release]
lto = true

[dependencies]
time = "0.1.40"
libc = "0.2.43"
colored = "1.6.1"